manifests/minio-tenant-testing/overlays/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minio-testing-gateway
  namespace: minio-tenant-testing
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "minio-testing.os4ml.wogra.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "minio-testing.os4ml.wogra.com"
      tls:
        mode: SIMPLE
        credentialName: minio-testing-ingress-cert
